V1 :
* Created project
* Added schema
* Added /directory route
* Added /acme/new-nonce route
* Added /acme/new-account route