@@ -1,2 +1,3 @@
 venv
+storage
 __pycache__
