@@ -2,6 +2,8 @@
 Global project configuration
 """
 
+import os
+from pathlib import Path
 from pydantic import BaseSettings
 
 
@@ -23,6 +25,18 @@ class Settings(BaseSettings):
     Contact email
     """
     contact_mail: str = "contact@acme.corp"
+
+    def ca_keyfile(self) -> Path:
+        """
+        Get CA key file
+        """
+        return Path(os.path.join(self.storage_path, "ca-privkey.pem"))
+
+    def ca_certfile(self) -> Path:
+        """
+        Get CA certificate
+        """
+        return Path(os.path.join(self.storage_path, "ca-pubkey.pem"))
 
 
 settings = Settings()
