@@ -1,0 +1,93 @@
+"""
+X509 certificate management
+"""
+
+# Copyright 2018 Simon Davy
+#
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to deal
+# in the Software without restriction, including without limitation the rights
+# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+# copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+#
+# The above copyright notice and this permission notice shall be included in
+# all copies or substantial portions of the Software.
+#
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+# SOFTWARE.
+
+from datetime import datetime, timedelta
+import ipaddress
+from cryptography import x509
+from cryptography.x509.oid import NameOID
+from cryptography.hazmat.primitives import hashes
+from cryptography.hazmat.backends import default_backend
+from cryptography.hazmat.primitives import serialization
+from cryptography.hazmat.primitives.asymmetric import rsa
+
+
+class X509:
+    """
+    X509 Certificates managements
+    """
+    @staticmethod
+    def generate_selfsigned_cert(hostname, ip_addresses=None, key=None):
+        """
+        Generates self signed certificate for a hostname, and optional IP addresses.
+        """
+
+        # Generate our key
+        if key is None:
+            key = rsa.generate_private_key(
+                public_exponent=65537,
+                key_size=2048,
+                backend=default_backend(),
+            )
+
+        name = x509.Name([x509.NameAttribute(NameOID.COMMON_NAME, hostname)])
+
+        # best practice seem to be to include the hostname in the SAN,
+        # which *SHOULD* mean COMMON_NAME is ignored.
+        alt_names = [x509.DNSName(hostname)]
+
+        # allow addressing by IP, for when you don't have real DNS
+        # (common in most testing scenarios
+        if ip_addresses:
+            for addr in ip_addresses:
+                # openssl wants DNSnames for ips...
+                alt_names.append(x509.DNSName(addr))
+                # ... whereas golang's crypto/tls is stricter, and needs IPAddresses
+                # note: older versions of cryptography do not understand ip_address objects
+                alt_names.append(x509.IPAddress(ipaddress.ip_address(addr)))
+
+        san = x509.SubjectAlternativeName(alt_names)
+
+        # path_len=0 means this cert can only sign itself, not other certs.
+        basic_contraints = x509.BasicConstraints(ca=True, path_length=0)
+        now = datetime.utcnow()
+        cert = (
+            x509.CertificateBuilder()
+            .subject_name(name)
+            .issuer_name(name)
+            .public_key(key.public_key())
+            .serial_number(1000)
+            .not_valid_before(now)
+            .not_valid_after(now + timedelta(days=10 * 365))
+            .add_extension(basic_contraints, False)
+            .add_extension(san, False)
+            .sign(key, hashes.SHA256(), default_backend())
+        )
+        cert_pem = cert.public_bytes(encoding=serialization.Encoding.PEM)
+        key_pem = key.private_bytes(
+            encoding=serialization.Encoding.PEM,
+            format=serialization.PrivateFormat.TraditionalOpenSSL,
+            encryption_algorithm=serialization.NoEncryption(),
+        )
+
+        return cert_pem, key_pem
